--- a/src/components/home.css
+++ b/src/components/home.css
@@ -2,7 +2,11 @@
 .home-page .top-banner{
     width: 100%;
     height: 600px;
+    background-image: linear-gradient(black,black);
     overflow: hidden;
+}
+.home-page .top-banner img{
+    /* opacity: .7; */
 }
 .container-fluid{
     padding: 0;
@@ -11,9 +15,11 @@
     position: absolute;
     color: rgb(255, 255, 255);
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
+    /* opacity: 2; */
     width: 100%;
     margin-top: 200px;
 }
 .home-page h1{
     font-size: 100px;
+    font-weight: 700;
 }
